<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="locale">en</string>
    <string name="error_network">Network error. Please check your internet connection and try again.</string>
    <string name="error_network_timeout">Network error. The request took too long. Please try again.</string>
    <string name="error_unknown">Unknown error. Please try again.</string>
    <string name="error_website">There was an error on the server. Please try again later.</string>
    <string name="error_server_maintenance">Server is under maintenance. Please try again later.</string>
    <string name="error_external_activity_not_found">Could not find an app on this device for file type %1$s.</string>
    <string name="error_downloading_image">There was an error downloading the image.</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="save_success_format">File saved to %1$s</string>
    <string name="view">View</string>
    <string name="image_saved_format">Image saved at %1$s.</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="page_format">Page %1$s</string>
    <string name="nsfw">NSFW</string>
    <string name="all">All</string>
    <string name="local">Local</string>
    <string name="subscribed">Subscribed</string>
    <string name="moderated_communities">Moderated communities</string>
    <string name="feeds">Feeds</string>
    <string name="communities">Communities</string>
    <string name="recents">Recents</string>
    <string name="reveal_warning_nsfw">This post is marked as NSFW</string>
    <string name="reveal_warning_default">This post is hidden</string>
    <string name="show_post">Show post</string>
    <string name="share">Share</string>
    <string name="copy_link_address">Copy link address</string>
    <string name="share_link">Share link</string>
    <string name="error_unsupported_video_type">Unsupported video type</string>
    <string name="server_results">Results</string>
    <string name="no_results_found">No results found</string>
    <string name="removed_by_mod_message">This post has been removed by the moderators of %1$s.</string>
    <string name="history">History</string>
    <string name="offline_scheduler_title_text">Pick a time to automatically refresh offline data.</string>
    <string name="enable">Enable</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="theme">Theme</string>
    <string name="locked_post_message">This post has been locked by the moderators of %1$s. New comments cannot be posted.</string>
    <string name="sort">Sort…</string>
    <string name="sort_order_hot">Hot</string>
    <string name="sort_order_new">New</string>
    <string name="sort_order_old">Old</string>
    <string name="time_frame_today">Today</string>
    <string name="sort_order_top">Top</string>
    <string name="time_frame_this_week">This week</string>
    <string name="time_frame_this_month">This month</string>
    <string name="time_frame_this_year">This year</string>
    <string name="time_frame_all_time">All time</string>
    <string name="sort_order_active">Active</string>
    <string name="sort_order_most_comments">Most comments</string>
    <string name="sort_order_new_comments">New comments</string>
    <string name="sort_order_controversial">Controversial</string>
    <string name="sort_order_scaled">Hot (scaled by community size)</string>
    <string name="sort_order_scaled_short">Hot (scaled)</string>
    <string name="layout">Layout</string>
    <string name="list">List</string>
    <string name="large_list">Large list</string>
    <string name="list_with_cards">List with cards</string>
    <string name="card">Card</string>
    <string name="card2">Card 2</string>
    <string name="card3">Card 3</string>
    <string name="full">Full</string>
    <string name="compact">Compact</string>
    <string name="removed_by_op_message">This post was deleted by the person who originally posted it.</string>
    <string name="community_state_format">%1$s - Page %2$s</string>
    <string name="error_history_entry_corrupt">Error. The selected history item is corrupted and cannot be used.</string>
    <string name="clear_history">Clear history</string>
    <string name="sort_comments_by">Sort comments by</string>
    <string name="cancel">Cancel</string>
    <string name="auth_required_title">Authorization required</string>
    <string name="auth_required_body">You must sign in to perform that action.</string>
    <string name="error_unable_to_handle_link">Unable to handle link %1$s</string>
    <string name="add_comment">Add comment</string>
    <string name="edit_comment">Edit comment</string>
    <string name="delete_comment">Delete comment</string>
    <string name="about">About</string>
    <string name="build_version">Version %1$s</string>
    <string name="set_as_home_page">Set as home page</string>
    <string name="home_page_set">Home page will be changed on next app start.</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="deleted_special">[deleted]</string>
    <string name="removed_special">[removed]</string>
    <string name="unknown_special">[unknown]</string>
    <string name="blank">Blank</string>
    <string name="missing_comment_special">[missing comment (removed or deleted)]</string>
    <string name="error_server">Server error. Code: %1$s.</string>
    <string name="login">Login</string>
    <string name="instance">Instance</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_top">Sort by top</string>
    <string name="coming_soon">Coming soon</string>
    <string name="saved">Saved</string>
    <string name="error_downloading_image_permission_denied">Unable to download image. Storage permission denied.</string>
    <string name="help">Help</string>
    <string name="error_account_instance_mismatch_title">Incompatible account instance</string>
    <string name="error_account_instance_mismatch">There is a mismatch between the instance the account was created on (%1$s) and the instance the action is taken on (%2$s).\nYou can fix this by either signing in to an account on the instance %2$s or by loading this page from the %1$s instance.</string>
    <string name="go_to_account_instance">Go to account instance</string>
    <string name="error_server_timeout">Timeout waiting for server. The server is likely overloaded.</string>
    <string name="error_socket_timeout">Timeout trying to reach the server. The server is either overloaded or there is an issue with your internet connection.</string>
    <string name="add_account">Add account</string>
    <string name="add_another_account">Add another account</string>
    <string name="accounts_and_settings"><![CDATA[Accounts & Settings]]></string>
    <string name="bookmarked_communities">Bookmarked communities</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="no_subscriptions">No subscriptions</string>
    <string name="no_posts">No posts.</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="bookmark_community">Bookmark community</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="remove">Remove</string>
    <string name="mau_format">%1$s MAU</string>
    <string name="error_page_not_found">Page not found.</string>
    <string name="comment">Comment</string>
    <string name="preview">Preview</string>
    <string name="text_emojis">Text emojis</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="quote">Quote</string>
    <string name="bulleted_list">Bulleted list</string>
    <string name="numbered_list">Numbered list</string>
    <string name="add_link_to_app">Add link to app</string>
    <string name="spoiler_text">Spoiler text</string>
    <string name="add_image">Add image</string>
    <string name="insert_link">Insert link</string>
    <string name="sarcasm">Sarcasm</string>
    <string name="settings">Settings</string>
    <string name="post_appearance">Post appearance</string>
    <string name="view_type_settings_desc">Customize how posts look</string>
    <string name="base_view_type">Base view type</string>
    <string name="font_size">Font size</string>
    <string name="reset_view_to_default_styles">Reset view to default styles?</string>
    <string name="reset_view_styles">Reset view styles</string>
    <string name="prefer_image_at_the_end">Prefer image at the end</string>
    <string name="dark_theme_settings">Dark theme settings</string>
    <string name="black_theme">Black theme</string>
    <string name="black_theme_desc">Uses pure black as the background color</string>
    <string name="lemmy_web_preferences">Lemmy web preferences</string>
    <string name="lemmy_web_preferences_desc">Configure Lemmy web preferences</string>
    <string name="display_name">Display name</string>
    <string name="default_sort_type">Default sort type</string>
    <string name="show_nsfw">Show NSFW</string>
    <string name="error_no_settings_changed">No settings changed</string>
    <string name="error_no_settings_changed_desc">You did not make changes to any settings so nothing was saved.</string>
    <string name="settings_saved">Settings saved</string>
    <string name="theme_settings_desc">Change and customize the app theme</string>
    <string name="base_theme">Base theme</string>
    <string name="use_system_theme">Use system theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="material_you">Material you</string>
    <string name="personalized_theming_based_on_your_wallpaper">Personalized theming based on your wallpaper</string>
    <string name="theme_config">Theme configuration</string>
    <string name="error_dynamic_color_not_supported">Material You is not supported by your device.</string>
    <string name="post_and_comments_appearance">Post and comments appearance</string>
    <string name="post_and_comments_settings_desc">Customize the post and comments screen</string>
    <string name="comment_settings">Comment settings</string>
    <string name="post_settings">Post settings</string>
    <string name="reset_post_styles">Reset post styles</string>
    <string name="reset_comment_styles">Reset comment styles</string>
    <string name="prefer_full_size_image">Prefer full size image</string>
    <string name="hidden_posts">Hidden posts</string>
    <string name="hidden_posts_desc"><![CDATA[Reset hidden posts & more]]></string>
    <string name="send_comment">Send comment</string>
    <string name="update_comment">Update comment</string>
    <string name="inbox">Inbox</string>
    <string name="posts">Posts</string>
    <string name="comments">Comments</string>
    <string name="stats">Stats</string>
    <string name="users">Users</string>
    <string name="users_per_day">Users per day</string>
    <string name="users_per_week">Users per week</string>
    <string name="users_per_month">Users per month</string>
    <string name="users_per_six_month">Users per 6 months</string>
    <string name="drafts">Drafts</string>
    <string name="toggle_post_view">Toggle post view</string>
    <string name="save_draft">Save draft</string>
    <string name="screenshot_settings">Screenshot settings</string>
    <string name="save_as_recording">Save as recording</string>
    <string name="table_name">Table name</string>
    <string name="row_count">Row count</string>
    <string name="rows">Rows</string>
</resources>