<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:orderInCategory="100" />
    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        android:orderInCategory="300" />
    <item
        android:id="@+id/layout"
        android:title="@string/layout"
        android:orderInCategory="400"
        android:icon="@drawable/baseline_view_comfy_24"
        app:iconTint="?attr/colorControlNormal">

        <menu>
            <item
                android:id="@+id/layoutList"
                android:title="@string/list"
                android:orderInCategory="100"
                android:icon="@drawable/baseline_list_24"
                app:iconTint="?attr/colorControlNormal" />
            <item
                android:id="@+id/layoutCard"
                android:title="@string/card"
                android:orderInCategory="200"
                android:icon="@drawable/baseline_view_agenda_black_24"
                app:iconTint="?attr/colorControlNormal" />
            <item
                android:id="@+id/layoutFull"
                android:title="@string/full"
                android:orderInCategory="200"
                android:icon="@drawable/baseline_view_day_black_24"
                app:iconTint="?attr/colorControlNormal" />
        </menu>
    </item>
    <item
        android:id="@+id/set_as_default"
        android:title="@string/set_as_home_page"
        android:orderInCategory="500"
        android:icon="@drawable/baseline_home_24"
        app:iconTint="?attr/colorControlNormal"/>
    <item
        android:id="@+id/toggle_bookmark"
        android:title=""
        android:orderInCategory="600"
        android:icon="@drawable/baseline_bookmark_24"
        app:iconTint="?attr/colorControlNormal"/>
</menu>