<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="64dp">

    <ImageView
        android:id="@+id/preview"
        android:src="@drawable/baseline_preview_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/preview"
        android:tooltipText="@string/preview"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/drafts"
        android:src="@drawable/baseline_note_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/drafts"
        android:tooltipText="@string/drafts"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/text_emojis"
        android:src="@drawable/baseline_emoji_emotions_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/text_emojis"
        android:tooltipText="@string/text_emojis"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/spoiler"
        android:src="@drawable/baseline_spoiler_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/spoiler_text"
        android:tooltipText="@string/spoiler_text"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/bold"
        android:src="@drawable/baseline_format_bold_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/bold"
        android:tooltipText="@string/bold"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/italic"
        android:src="@drawable/baseline_format_italic_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/italic"
        android:tooltipText="@string/italic"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/strikethrough"
        android:src="@drawable/baseline_format_strikethrough_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/strikethrough"
        android:tooltipText="@string/strikethrough"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/quote"
        android:src="@drawable/baseline_format_quote_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/quote"
        android:tooltipText="@string/quote"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/link"
        android:src="@drawable/baseline_link_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/insert_link"
        android:tooltipText="@string/insert_link"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/bulleted_list"
        android:src="@drawable/baseline_format_list_bulleted_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/bulleted_list"
        android:tooltipText="@string/bulleted_list"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/numbered_list"
        android:src="@drawable/baseline_format_list_numbered_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/numbered_list"
        android:tooltipText="@string/numbered_list"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/spongebob"
        android:src="@drawable/ic_troll"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/sarcasm"
        android:tooltipText="@string/sarcasm"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/image"
        android:src="@drawable/baseline_image_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/add_image"
        android:tooltipText="@string/add_image"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

    <ImageView
        android:id="@+id/link_app"
        android:src="@drawable/ic_app_link"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="@string/add_link_to_app"
        android:tooltipText="@string/add_link_to_app"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"
        app:tint="?colorControlNormal"/>

</LinearLayout>