<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toggle_post_view"
        android:title="@string/toggle_post_view"
        android:orderInCategory="200"
        android:icon="@drawable/baseline_photo_size_select_large_24"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorControlNormal"/>

    <item
        android:id="@+id/screenshot_settings"
        android:title="@string/screenshot_settings"
        android:orderInCategory="300"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorControlNormal" />

    <item
        android:id="@+id/record"
        android:title="@string/save_as_recording"
        android:orderInCategory="400"
        android:icon="@drawable/baseline_videocam_24"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorControlNormal" />


</menu>