<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="@string/table_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceLabelSmall"
        android:layout_marginHorizontal="@dimen/dialog_padding"/>
    <TextView
        android:id="@+id/table_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBodyMedium"
        android:layout_marginHorizontal="@dimen/dialog_padding"/>

    <TextView
        android:text="@string/row_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceLabelSmall"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginHorizontal="@dimen/dialog_padding"/>
    <TextView
        android:id="@+id/row_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBodyMedium"
        android:layout_marginHorizontal="@dimen/dialog_padding"/>

    <TextView
        android:text="@string/rows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceTitleMedium"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginHorizontal="@dimen/dialog_padding"/>

</LinearLayout>